results/SVCOMP/specgen/log-StringConstructors05-2024_03_02_02_34_38.txt
public class StringConstructors05 {
    //@ requires arg != null;
    //@ ensures \result ==> arg.equals(new String({'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'}));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s3 = new String(charArray);
        return s3.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:3: error: illegal start of type
    //@ ensures \result ==> arg.equals(new String({'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'}));
                                                   ^
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:4: error: illegal start of expression
    public static boolean f(String arg) {
    ^
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:6: error: Method specs may not precede a variable declaration
        String s3 = new String(charArray);
               ^
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:7: error: illegal start of type
        return s3.equals(arg);
        ^
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:7: error: <identifier> expected
        return s3.equals(arg);
                        ^
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:7: error: <identifier> expected
        return s3.equals(arg);
                            ^
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:9: error: class, interface, enum, or record expected
}
^
7 errors

public class StringConstructors05 {
    //@ requires arg != null;
    //@ ensures \result ==> arg.equals(new String(charArray));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s3 = new String(charArray);
        return s3.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:3: error: cannot find symbol
    //@ ensures \result ==> arg.equals(new String(charArray));
                                                  ^
  symbol:   variable charArray
  location: class StringConstructors05
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> arg.equals(new String(charArray));
                                       ^
2 errors

public class StringConstructors05 {
    //@ requires arg != null;
    //@ ensures \result ==> arg.equals("diffblue");
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s3 = new String(charArray);
        return s3.equals(arg);
    }
}
